@@ -212,6 +212,7 @@ Grid *gridImport(int maxnode, int nnode,
   grid->costFunction = gridCOST_FCN_MEAN_RATIO;
   grid->costConstraint = gridCOST_CNST_VOLUME;
   grid->min_allowed_insert_cost = 0.01;
+  grid->min_allowed_surface_smooth_cost = 0.01;
 
   grid->tecplotGeomFile = NULL;
   grid->tecplotScalarFile = NULL;
@@ -4240,6 +4241,17 @@ Grid *gridSetMinInsertCost(Grid *grid, double min_cost )
 double gridMinInsertCost(Grid *grid )
 {
   return grid->min_allowed_insert_cost;
+}
+
+Grid *gridSetMinSurfaceSmoothCost(Grid *grid, double min_cost )
+{
+  grid->min_allowed_surface_smooth_cost = min_cost;
+  return grid;
+}
+
+double gridMinSurfaceSmoothCost(Grid *grid )
+{
+  return grid->min_allowed_surface_smooth_cost;
 }
 
 int gridStoredCostDegree( Grid *grid )
